--- a/src/client/src/pages/ContactPage/ContactPage.module.css
+++ b/src/client/src/pages/ContactPage/ContactPage.module.css
@@ -17,10 +17,12 @@
     margin-right: 20px;
     border: 1px solid white;
     border-radius: 10px;
-    padding: 14px 14px 10px 14px;
+    padding: 14px 14px 10px 24px;
     display: flex;
     flex-direction: column;
     width: 570px;
+    align-items: flex-start;
+    box-shadow: 0 4px 8px 0 #6f7a90;
 }
 
 .title {
