--- a/src/client/src/index.css
+++ b/src/client/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: american typewriter, serif;
+  font-family: cursive;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
