--- a/src/client/src/pages/Navigation/Navigation.module.css
+++ b/src/client/src/pages/Navigation/Navigation.module.css
@@ -7,10 +7,13 @@
   overflow: hidden;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
   background-color: #282c34;
   padding-right: 50px;
   padding-top: 20px;
+  z-index: 20;
+  margin-left: 40px;
+  width: 90%;
 }
 
 .desktopNav li a {
@@ -21,14 +24,9 @@
   text-decoration: none;
 }
 
+
 .desktopNav li a:hover {
   border-bottom: 1px solid white;
-}
-
-.fixed {
-  position: fixed;
-  z-index: 20;
-  right: 0;
 }
 
 .fixedContainer {
