--- a/src/client/src/pages/Gallery/GalleryPage.module.css
+++ b/src/client/src/pages/Gallery/GalleryPage.module.css
@@ -80,13 +80,12 @@
     background-color: #323334;
     border-radius: 18px;
     padding: 12px 8px 8px 16px;
-
+    height: 100%;
 }
 
 .commentHeading {
     color: white;
     margin-left: 20px;
-    margin-top: 30px;
 }
 
 .commentBox {
