--- a/src/client/src/pages/Gallery/GalleryPage.module.css
+++ b/src/client/src/pages/Gallery/GalleryPage.module.css
@@ -2,25 +2,32 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 16px;
+    margin: 8px;
 }
 
 
-@media only screen and (max-width: 950px) {
+@media only screen and (max-width: 1288px) {
     .gallery {
         grid-template-columns: 1fr 1fr;
     }
 
 }
 
-@media only screen and (max-width: 670px) {
+@media only screen and (max-width: 840px) {
     .gallery {
-        grid-template-columns: 1fr;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .img {
+        width: 100% !important;
     }
 }
 
 .img {
-    width: 300px;
-    height: 200px;
+    width: 400px;
+    height: 300px;
     border-radius: 5px;
     transition: 0.3s;
     cursor: move;
@@ -34,6 +41,35 @@
     opacity: 0.7;
 }
 
+img:hover + .description {
+    display: flex;
+}
+
+
+.description {
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 8px;
+    position: relative;
+    bottom: 120px;
+    height: 120px;
+    z-index: 2;
+    opacity: 1;
+    background-color: rgba(17, 23, 26, 0.9);
+    font-size: 12px;
+}
+
+
+.description div {
+    margin-left: 8px;
+}
+
+.description .title {
+    margin-left: 8px;
+    font-size: 28px;
+}
 
 .modal {
 
