Setup for production =)

--- a/src/client/src/pages/Gallery/GalleryPage.module.css
+++ b/src/client/src/pages/Gallery/GalleryPage.module.css
@@ -45,6 +45,9 @@ img:hover + .description {
     display: flex;
 }
 
+.description:hover {
+    display: flex;
+}
 
 .description {
     display: none;
